lupdate: Correct Parsing of Escaped Unicode Characters

The lupdate parser ignores the variable sizes of escaped characters.
Take the size of the escaped characters into account by considering the
escaping notations \x, \u and \U.

Fixes: QTBUG-105573
Change-Id: Id14a3111a01ba4d3d1f92e7a9638efeeafb993b8
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>